Header readme formatting

--- a/Audio_Emotion_Regression.ipynb
+++ b/Audio_Emotion_Regression.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/chesseraf/Audio-emotion-recognition/blob/main/Audio_Emotion_Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -19,7 +19,7 @@
       "outputs": [],
       "source": [
         "from google.colab import drive\n",
-        "DRIVE_MOUNTED = False\n",
+        "DRIVE_MOUNTED = True\n",
         "if DRIVE_MOUNTED:\n",
         "  drive.mount('/content/drive')\n",
         "  SAVE_DIR = \"/content/drive/MyDrive/w2v2_temporal_head\"\n",
@@ -745,8 +745,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
